Fix calendar on mobile

--- a/app/styles/pages/pages-shared.scss
+++ b/app/styles/pages/pages-shared.scss
@@ -63,6 +63,10 @@
             width: 100%;
             padding: 1rem;
             font-size: 1.2rem;
+
+            @media only screen and (max-width: 600px) {
+                width: auto;
+            }
         }
     }
 
